--- a/app/src/main/res/layout/bluetooth.xml
+++ b/app/src/main/res/layout/bluetooth.xml
@@ -51,9 +51,10 @@
         android:id="@+id/textView"
         android:layout_width="239dp"
         android:layout_height="56dp"
-        android:layout_marginTop="32dp"
         android:text="Bluetooth"
+        android:textColor="#000000"
         android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.646"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,16 +72,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Device:"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="216dp" />
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text='Status: ""'
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="305dp" />
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
