--- a/app/src/main/res/layout/bluetooth.xml
+++ b/app/src/main/res/layout/bluetooth.xml
@@ -22,10 +22,12 @@
         android:layout_width="140dp"
         android:layout_height="22dp"
         android:entries="@array/range"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="262dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.375" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_bluetooth"
