device to connect to is stored as global function

--- a/app/src/main/res/layout/bluetooth.xml
+++ b/app/src/main/res/layout/bluetooth.xml
@@ -91,6 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Device"
+        android:focusable="true"
+        android:onClick="change_device_to_connect"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
